2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>

	* charpick.c (build_table): Set the atk description
	for each of the toggle buttons Fixes #128292
 
	Patch by:  Arvind Samptur  <arvind.samptur@wipro.com>

2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>

	* charpick.h:
	* charpick.c: (charpicker_applet_fill)
	The stock icon got registered.

	* properties.c: (register_stock_for_edit)
	The above function is added to register the stock icon.
	"Properties" button is renamed to "Edit" button.
	The mnemonic "Pal_ettes" is changed to "_Palettes".

	Patch by: Shakti Sen <shakti.sen@wipro.com>

	Fixes the bug #128088

2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>

	* properties.c: HIG fixes for the treeview.

	Patch by: Ross Burton  <r.burton@180sw.com>

	Fixes bug: #144027.

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* help/ja/*: Add ja docs since the original author
	didn't get back to me.

2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* help/Makefile.am: Add l10n'd docs to the build.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* help/*: Update docs for de, es, fr, it, ko, sv, 
	zh_CN, zh_HK and zh_TW.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Kill off the old sgml based docs.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* charpick.c (about):
	Set the screen right when the user requests the about
	dialog and it's already there but not on the right
	screen.

2004-02-11 Breda McColgan <breda.mccolgan@sun.com>

	* help/C/char-palette.xml: Updated for GNOME 2.6.
	* help/C/char-palette-C.omf: Updated for GNOME 2.6.
	* help/C/l10n.txt: Updated for GNOME 2.6.

2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (CLEANFILES): Add .server and .server.in here.
        (#132071, Padraig O'Briain)

2004-02-06  Dennis Smit  <ds@nerds-incorporated.org>

	* charpick.c (chooser_button_clicked):
	set the menu to the right screen.

	This fixes bug: #133587

2004-02-01  Dennis Smit  <ds@nerds-incorporated.org>
