@@ -1,3 +1,10 @@
+2004-07-08  Vincent Noel  <v.r.noel@larc.nasa.gov>
+
+	* charpick.c (applet_size_allocate): use the "size-allocate"
+	signal to get the panel size.
+	(build_table): Fix how the row number is computed to get the
+	characters spread out on multiple rows.
+
 2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>
 
 	* charpick.c (build_table): Set the atk description
